--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 /* Logo */
 /* Adapted from Zachary Blackwood */
-[data-testid="stSidebar"] {
-    background-image: url(https://github.com/jonathjd/streamlit-biomarker/blob/main/images/SomalogicLogo.png?raw=true);
+[data-testid="stSidebarNav"] {
+    background-image: url(https://github.com/jonathjd/cwu-fitlab/blob/main/img/cwu-trans.png?raw=true);
     background-size: 225px;
     background-repeat: no-repeat;
     background-position: 18px 40px;
 }
 
 
-/* Card */
+/* Card
 /* Adapted from https://startbootstrap.com/theme/sb-admin-2 */
 div.css-1r6slb0.e1tzin5v2 {
 background-color: #FFFFFF;
